Update to landing page CSS needs to be cleaned up

--- a/index.html
+++ b/index.html
@@ -1,1 +1,75 @@
-ff
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+    <section class="full-width blue grow">
+        <div class="section1">
+            <div class="header">Header Logo
+                <ul class="links">
+                    <li><a href="">header link one</a></li>
+                    <li><a href="">header link one</a></li>
+                    <li><a href="">header link one</a></li>
+                </ul>
+            </div>
+            <div class="hero">
+                <div class="heroleftside">
+                    <h1 class="heroheading">This website is awesome</h1>
+                    <p class = "herosecondary">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast. This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</p>
+                    <button class="signup1">Sign up</button>
+                </div>
+                <div class="herorightside">
+                    <img src="images/pexels-reinaldo-30953505.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="full-width white grow">
+        <div class="randominfosection">
+            <h2>Some random information</h2>
+            <div class="itemscontainer">
+                <div class="item">
+                    <img src="images/pexels-117218808-9861607.jpg" alt="">
+                    <p>an empty street in tokyo</p>
+                </div>
+                <div class="item">
+                    <img src="images/pexels-apasaric-3048516.jpg" alt="">
+                    <p>alleyway smoking area for the restaurant employees</p>
+                </div>
+                <div class="item">
+                    <img src="images/pexels-tizzy-27676684.jpg" alt="">
+                    <p>this is just some random text because I can't be bothered to describe every image</p>
+                </div>
+                <div class="item">
+                    <img src="images/pexels-apasaric-2506923.jpg" alt="">
+                    <p>neon capitalism</p>
+                </div>
+                <div class="item">
+                    <img src="images/pexels-apasaric-2506923.jpg" alt="">
+                    <p>neon capitalism</p>
+                </div>
+                <div class="item">
+                    <img src="images/pexels-apasaric-2506923.jpg" alt="">
+                    <p>neon capitalism</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="full-width grey grow">
+        <div class="quote">This is an inspiring Japanese quote...or maybe it's just a space filler. All I know is that it looks nice. <p class="quotename">-Some ancient philosopher</p></div>
+    </section>
+    <section class="full-width white grow">
+        <div class="bluecontainer">
+            <div class="leftsideblue">Call to action! It's time!<div>Sign up for our product by clicking that button right over there!</div></div>
+            <button>Sign up</button>
+        </div>
+    </section>
+    <section class="full-width blue">
+        <div class="footer">Copyright C The Odin Project 2025</div>
+    </section>
+</body>
+</html>
