--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="full-width blue grow">
-        <div class="section1">
+    <section class="full-width blue">
+        <div class="section1 center">
             <div class="header">Header Logo
                 <ul class="links">
-                    <li><a href="">header link one</a></li>
-                    <li><a href="">header link one</a></li>
-                    <li><a href="">header link one</a></li>
+                    <li><a href="https://github.com/karim-saddy/landingpage">header link one</a></li>
+                    <li><a href="https://github.com/karim-saddy/landingpage">header link one</a></li>
+                    <li><a href="https://github.com/karim-saddy/landingpage">header link one</a></li>
                 </ul>
             </div>
             <div class="hero">
@@ -28,8 +28,8 @@
             </div>
         </div>
     </section>
-    <section class="full-width white grow">
-        <div class="randominfosection">
+    <section class="full-width white">
+        <div class="randominfosection center">
             <h2>Some random information</h2>
             <div class="itemscontainer">
                 <div class="item">
@@ -63,13 +63,12 @@
         <div class="quote">This is an inspiring Japanese quote...or maybe it's just a space filler. All I know is that it looks nice. <p class="quotename">-Some ancient philosopher</p></div>
     </section>
     <section class="full-width white grow">
-        <div class="bluecontainer">
-            <div class="leftsideblue">Call to action! It's time!<div>Sign up for our product by clicking that button right over there!</div></div>
-            <button>Sign up</button>
+        <div class="signup">
+            <div><div class="signupcontainer">Call to action! It's time!</div><div class="signupsubtext">Sign up for our product by clicking that button right over there!</div></div><button>Sign up</button>
         </div>
     </section>
     <section class="full-width blue">
-        <div class="footer">Copyright C The Odin Project 2025</div>
+        <div class="footer">Copyright © Karim's Project 2025</div>
     </section>
 </body>
 </html>
